syntax = "proto3";
package raft;

option go_package = "github.com/djsurt/the-new-zookeepers/server/proto/raftpb";

message VoteRequest {
  int32 term = 1;
  int32 candidateId = 2;
  int32 lastLogIndex = 3;
  int32 lastLogTerm = 4;
}

message Vote {
  int32 term = 1;
  bool voteGranted = 2;
}

message AppendEntriesRequest {
  int32 term = 1;
  int32 leaderId = 2;
  int32 prevLogIndex = 3;
  int32 prevLogTerm = 4;
  // TODO: Implement me properly.
  message Entry {
    string message = 1;
  }
  repeated Entry entries = 5;
  int32 leaderCommit = 6;
}

message AppendEntriesResult {
  int32 term = 1;
  bool success = 2;
}

service Election {
  rpc RequestVote (VoteRequest) returns (Vote);
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResult);
}
